[gd_scene load_steps=9 format=2]

[ext_resource path="res://playerspriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://assets/jump2.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/hit4.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/light1.png" type="Texture" id=5]
[ext_resource path="res://dust.tscn" type="PackedScene" id=6]
[ext_resource path="res://death.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.664, 13.8957 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 2.15895, 2.15895 )
script = ExtResource( 2 )
dustScene = ExtResource( 6 )
boomScene = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
color = Color( 0.560784, 0, 0, 1 )
energy = 0.8

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.366, 2.366 )
frames = ExtResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.01072, 7.41099 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0
pitch_scale = 1.23

[node name="WallChecker" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
rotation = -1.5708
enabled = true
cast_to = Vector2( -0.0951581, 24.549 )
collision_mask = 2

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="jump" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
